# ziper

./: CMakeLists.txt  build-and-run  req  ziper_stats.csv
src/: CMakeLists.txt  main.cpp
src/zip/: CMakeLists.txt
tmp/: abc-0.txt  abc-1.txt
toCompress/: abc-2.txt  abc-3.txt
